--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FEFU</title>
+    <title>index</title>
   </head>
   <body>
     <center>
-      <img src ="https://Ociket.github.io/new/F.jpg""
-      <div style='text-algin:center; width:100%'>
-      <a href="https://Ociket.github.io/new/index.html">Вернуться</a>
+       <h1> Оськин Данил Константинович </h1>
+       <h2>Б9121-09.03.02</h2>
+       <a href ="https://Ociket.github.io/new/HT1.html" > FEFU <br> </a>
+       <a href ="https://Ociket.github.io/new/HT2.html" > FIO </a>
   </body>
 </html>
-
